TODO:
 - add sounds

1.2.5:
 + added response to player
 + added notification to other administrations about response
 + fixed seconds implemented in integer type

1.2.2:
 + added default config and message download
 + added update checker
 + added server name typing in config
 + added cooldown to messages based on permission

1.2:
 + fixed server name displaying in BungeeCord mode,
 + fixed server name displaying in local mode,
 + added version control for title displaying (1.9+).

1.1:
 + added BungeeCord support,
 + small code fixes
 + added new messages

1.0:
 + FIRST RELEASE