@@ -1,3 +1,6 @@
+#CONFIG GENERATED FOR VERSION:
+#${project.version}
+
 #Display information on the screen to admins (title/subtitle). Admin must have permission!
 #Only for 1.9+ versions!
 screen_information: true
