@@ -1,4 +1,5 @@
-#This is configuration file of style of messages.
+#MESSAGES GENERATED FOR VERSION:
+#${project.version}
 
 #Prefix placeholder
 prefix: "&7[&cHelpOP&7]"
